--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -11,7 +11,7 @@
         {
             "width": 24,
             "height": 24,
-            "path": "images/icon@1x.png"
+            "path": "images/icon.png"
         },
         {
             "width": 48,
